Fix one pixel shift when highlighting; move lightup icon logic to separate logic.

--- a/replay-demo/src/light-matrix.css
+++ b/replay-demo/src/light-matrix.css
@@ -13,7 +13,7 @@ div.matrix-dot-outer {
 }
 
 div.matrix-container.highlighting div.matrix-dot-outer {
-  border: 1px solid #555;
+  outline: 1px solid #555;
 }
 
 div.matrix-dot {
